Hit EGL_NO_SURFACE in RenderCompositorEGL::BeginFrame()
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | disabled |
People
(Reporter: sotaro, Assigned: sotaro)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
When debugging STR of Bug 1672139, I hit the following error
bug 1672139 comment6 also mentions it.
It seems like a regression of Bug 1656211.
| Assignee | ||
Comment 1•5 years ago
|
||
Bug 1656211 added WebRenderBridgeParent::RecvForceComposite(). It trigger generate frame even when widget is not ready for rendering.
And RecvForceComposite() does not care AsyncImages and OMTASamplers.
| Assignee | ||
Comment 2•5 years ago
|
||
:aosmond, is there a reason why the RecvForceComposite() is added instead of using WebRenderBridgeParent::ScheduleForcedGenerateFrame()?
Comment 3•5 years ago
|
||
Gnome Wayland, Debian Testing, Intel/Mesa
https://hg.mozilla.org/integration/autoland/shortlog/99dcd4e9ee56
STR: Open the account menu
first bad: $ MOZ_ENABLE_WAYLAND=1 mozregression --repo autoland --launch 99dcd4e9ee56221ff36f7ad3d152217fe9ed2ce0 --pref gfx.webrender.all:true -a about:blank -P stdout
0:46.07 INFO: b"[GFX1-]: We don't have EGLSurface to draw into. Called too early?"
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•5 years ago
|
Comment 7•5 years ago
•
|
||
I missed this needinfo sorry. I added it because I did not want to wait for the schedule. We may have a bad frame buffer currently swapped when we get the configure event which raced against our frame generation. The only way to make it go away from my testing was to recomposite. Ideally we would beat vsync displaying the frame.
Description
•