Bug 1672565 - Use ScheduleForcedGenerateFrame() in WebRenderBridgeParent::RecvForceComposite() r=nical

Bug 1656211 added WebRenderBridgeParent::RecvForceComposite(). It triggers generate frame even when widget is not ready for rendering.

Differential Revision: https://phabricator.services.mozilla.com/D94553